# Fedora

./: .gitignore
documentation/BOM/: BOM.aux  BOM.out  BOM.tex
documentation/BOM/auto/: BOM.el
documentation/uml/: plan.txt
src/: docker-compose.yml
src/Agent/: CMakeLists.txt  Dockerfile  run.sh
src/Agent/src/: Agent.cpp
src/ClientOne/: CMakeLists.txt  Dockerfile  run.sh
src/ClientOne/idl/: Magnitude.idl  Vector.idl
src/ClientOne/src/: PubClient.cpp
src/ClientThree/: CMakeLists.txt  Dockerfile  run.sh
src/ClientThree/Fedora/: CMakeLists.txt
src/ClientThree/Fedora/include/Fedora/: Broker.hpp
src/ClientThree/Fedora/libs/: CMakeLists.txt
src/ClientThree/Fedora/libs/rapidxml-1.13/: rapidxml_print.hpp
src/ClientThree/Fedora/src/: Broker.cpp  BrokerImpl.cpp
src/ClientThree/Fedora/src/include/: BrokerImpl.hpp
src/ClientThree/Fedora/src/include/Fedora/: BrokerImpl.hpp
src/ClientThree/Fedora/testing/: TestBroker.cpp
src/ClientThree/resources/: config.xml
src/ClientThree/src/: Broker.cpp  Broker.hpp  ClientThree.cpp  PubClient.cpp
src/ClientTwo/: CMakeLists.txt  run.sh
src/ClientTwo/Fedora/: CMakeLists.txt
src/ClientTwo/Fedora/include/Fedora/: Broker.hpp
src/ClientTwo/Fedora/src/: Broker.cpp  BrokerImpl.cpp
src/ClientTwo/Fedora/src/include/Fedora/: BrokerImpl.hpp
src/ClientTwo/src/: Broker.cpp  Broker.hpp  Publisher.c  SubClient.cpp
src/Logger/: Dockerfile
src/Logger/src/: Logger.cpp
src/Messages/: Vector.idl  float.idl
src/VectorPublisher/: CMakeLists.txt  Dockerfile  run.sh
src/VectorPublisher/src/: VectorPublisher.cpp
